# gods-as-centroids

./: .gitignore  CITATION.cff  Gods as Centroids_ A Swarm-Based Vector Model of Religious Evolution.txt  LICENSE  MANIFEST.json  Makefile  NOVELTY_ASSESSMENT.md  README.md  accessibility_experiment.py  corollary_demonstration.py  corollary_demonstration_results.json  corollary_suite.py  dual_track_backtesting.py  parallel_validation.py  phase_sweep.py  requirements.txt  testable_claims_framework.py
cpp/: CMakeLists.txt  gabm
cpp/src/: agent.cpp  agent.h  kernel.cpp  kernel.h  main.cpp  utils.cpp  utils.h
docs/: index.html  index.html.backup  template.html
go/: config.json  gabm  go.mod  kernel.go  main.go
godform/: __init__.py  domains.py  godform_modal.py  visualize.py
lattice_autoencoder/: README.md  __init__.py  data.py  embed_corpus.py  lattice.py  model.py  scale_corpus_modal.py  train.py  train_modal.py  train_multimodal.py
mlx-pipeline/: bottleneck_arch.py  braille_bottleneck.py  expanded_embeddings_results.json  experiment_results.json  experiment_results.md  frontier_judge.py  frontier_judge_results.json  frontier_judge_results.md  multi_model_embeddings.py  multi_model_results.json  multi_model_results.md  multi_scorer.py  multi_scorer_consensus.json  non_theological_demo.py  non_theological_results.json  non_theological_results.md  real_embeddings.py  real_embeddings_results.json  real_embeddings_results.md  score_expanded_corpus.py  scores_gemini_flash.json  scores_gpt4o.json  scores_llama70b.json
paper/: gods_as_centroids_v2.md  md2html.py  (+1 more)
(+98 files in other folders)
